Add fetch request to api on localhost, log data response

--- a/GroceryFinderFrontEnd/index.html
+++ b/GroceryFinderFrontEnd/index.html
@@ -8,10 +8,14 @@
   <title>Grocery Finder</title>
 </head>
 <body>
-  
+
   <div class="container">
     <h1>Grocery Finder</h1>
     <hr>
+    <div id="stores">
+      <!-- Stores go here -->
+    </div>
+
   </div>
 
   <script
