Add custom styling, add navigation bar

--- a/GroceryFinderFrontEnd/index.html
+++ b/GroceryFinderFrontEnd/index.html
@@ -12,6 +12,13 @@
   <div class="container">
     <h1>Grocery Finder</h1>
     <hr>
+    <div class="navigation">
+      <a href="http://localhost:5000/" class="btn btn-success">API Documentation</a>
+      <div class="searchBar">
+        <input id="searchParam" type="text">
+        <a id="searchButton" class="btn btn-primary">Search</a>
+      </div>
+    </div>
     <div id="stores">
       <!-- Stores go here -->
     </div>
@@ -22,6 +29,6 @@
   src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
   crossorigin="anonymous"></script>
-  <script src="js/scirpts.js"></script>
+  <script src="js/scripts.js"></script>
 </body>
 </html>
