Add edit routing from front-end to API

--- a/GroceryFinderFrontEnd/index.html
+++ b/GroceryFinderFrontEnd/index.html
@@ -23,6 +23,19 @@
       <!-- Stores go here -->
     </div>
 
+    <div id="edit">
+      <h1>Edit Store</h1>
+      <form id="editForm">
+        <p>Store Name:</p>
+        <input type="text" id="name" />
+        <p>Store City:</p>
+        <input type="text" id="city" />
+        <p>Store Name:</p>
+        <input type="text" id="description" />
+        <input type="submit" class="btn btn-success" />
+      </form>
+    </div>
+
   </div>
 
   <script
