Update scripts to for delete functionality, update styling, update migrations with new timing

--- a/GroceryFinderFrontEnd/index.html
+++ b/GroceryFinderFrontEnd/index.html
@@ -13,12 +13,13 @@
     <h1>Grocery Finder</h1>
     <hr>
     <div class="navigation">
-      <a href="http://localhost:5000/" class="btn btn-success">API Documentation</a>
+      <a id="documentationButton" href="http://localhost:5000/" class="btn btn-warning">API Documentation</a>
       <div class="searchBar">
         <input id="searchParam" type="text">
         <a id="searchButton" class="btn btn-primary">Search</a>
       </div>
     </div>
+    <button id="addStoreButton" class="btn btn-lg btn-block btn-success">+ Add New Store</button>
     <div id="stores">
       <!-- Stores go here -->
     </div>
